Made pack types list immutable.